--- a/css/style.css
+++ b/css/style.css
@@ -40,44 +40,6 @@ a:hover {
   text-decoration: none;
 }
 
-/* intro styles */
-
-#intro {
-  padding-bottom: 10rem;
-}
-#intro p {
-  font-size: 1rem;
-  line-height: 1.5;
-  /* lineheightte rem vs diğerleri kullanılmaz. */
-}
-#intro .name {
-  font-family: var(--mono);
-}
-.name span {
-  font-family: var(--sans);
-  font-size: 4rem;
-  color: var(--aqua);
-  display: block;
-  /*  normalde span inlinedır block  yaparak aşağı satıra iniyoruz. */
-}
-#intro h2 {
-  font-size: 4rem;
-  font-weight: normal;
-}
-
-/*    contact     */
-
-#contact {
-  text-align: center;
-  margin: 0 auto;
-  padding: 3rem 0;
-  background-color: var(--plum);
-}
-
-#contact p:last-child {
-  margin-top: 3rem;
-}
-
 /*     navbar     */
 
 nav {
@@ -127,16 +89,70 @@ nav [class*="fa-"]:hover {
   background-color: var(--magenta);
   padding: 0.5rem;
   border-radius: 5px;
+  text-decoration: none;
+  font-family: var(--mono);
+  color: var(--white);
 }
 .button:hover {
   color: var(--white);
   background-color: var(--hotmag);
 }
 
+/* intro styles */
+
+#intro {
+  padding: 4rem 1rem 10rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+#intro p {
+  font-size: 1rem;
+  line-height: 1.5;
+  /* lineheightte rem vs diğerleri kullanılmaz. */
+}
+#intro .name {
+  font-family: var(--mono);
+}
+.name span {
+  font-family: var(--sans);
+  font-size: 4rem;
+  color: var(--aqua);
+  display: block;
+  /*  normalde span inlinedır block  yaparak aşağı satıra iniyoruz. */
+}
+#intro h2 {
+  font-size: 4rem;
+  font-weight: normal;
+}
+
+/*    contact     */
+
+#contact {
+  width: 400px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 3rem 0;
+}
+#contact p:last-child {
+  margin-top: 3rem;
+}
+/*       div       */
+.section-plum {
+  background-color: var(--plum);
+}
+.gradient {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 23, 228, 1) 0%,
+    rgba(134, 251, 251, 1) 100%
+  );
+  height: 2px;
+}
 /*       footer       */
 
 footer {
   text-align: center;
+  padding: 4rem 0;
 }
 
 footer ul {
