--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ a:hover {
   color: var(--hotmag);
   text-decoration: none;
 }
+img {
+  width: 100%;
+}
 
 /*     navbar     */
 
@@ -125,6 +128,61 @@ nav [class*="fa-"]:hover {
   font-weight: normal;
 }
 
+/*       projects       */
+#projects {
+  padding: 4rem 1rem;
+}
+#projects h2 {
+  font-size: 2.5rem;
+  margin-bottom: calc(2.5rem * 1.5);
+}
+#projects h3 {
+  color: var(--aqua);
+}
+#projects h4 {
+  font-size: 1rem;
+  font-family: var(--mono);
+  margin: 0;
+}
+.blackbox {
+  background-color: var(--black);
+  padding: 1rem;
+  border-radius: 10px;
+  color: var(--white);
+  font-size: 1rem;
+  line-height: 1.5;
+}
+#projects ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+#projects img {
+  margin: 2rem 0 4rem 0;
+  border-left: 1px solid var(--aqua);
+  border-top: 1px solid var(--aqua);
+  border-radius: 25px;
+  padding: 1rem;
+}
+@media (min-width: 550px) {
+  article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+  .text {
+    order: 1;
+    text-align: right;
+  }
+  #projects ul{
+    justify-content: flex-end;
+  }
+}
+
 /*    contact     */
 
 #contact {
@@ -139,6 +197,9 @@ nav [class*="fa-"]:hover {
 /*       div       */
 .section-plum {
   background-color: var(--plum);
+}
+.section-dkblue {
+  background-color: var(--dkblue);
 }
 .gradient {
   background: linear-gradient(
