--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Oxygen+Mono&family=Oxygen:wght@300;400;700&display=swap");
 :root {
   --black: #171321;
   --dkblue: #0d314b;
@@ -42,13 +41,11 @@ a:hover {
 img {
   width: 100%;
 }
-
 /*     navbar     */
-
 nav {
   font-family: var(--mono);
   font-size: 80%; /* burada verdiğimiz yüzde ile size yüzdelik olarak küçültüyoruz.*/
-  padding: 1rem;
+  padding: 4rem 1rem;
 }
 nav h1 a {
   font-family: var(--sans);
@@ -72,7 +69,8 @@ nav a {
   text-decoration: none;
   display: block; /* tüm alanın tıklanabilmesi bir buton gibi olması adına block yapıyoruz. */
 }
-nav a:hover {
+nav a:hover,
+nav [class*="fa-"]:hover {
   color: var(--magenta);
 }
 nav [class*="fa-"] {
@@ -85,9 +83,6 @@ nav h1 [class*="fa-"] {
   color: var(--aqua);
 }
 
-nav [class*="fa-"]:hover {
-  color: var(--magenta);
-}
 .button {
   background-color: var(--magenta);
   padding: 0.5rem;
@@ -125,7 +120,6 @@ nav [class*="fa-"]:hover {
 }
 #intro h2 {
   font-size: 4rem;
-  font-weight: normal;
 }
 
 /*       projects       */
@@ -160,6 +154,7 @@ nav [class*="fa-"]:hover {
   flex-flow: row wrap;
   justify-content: flex-start;
   gap: 1rem;
+  font-size: 1rem;
 }
 #projects img {
   margin: 2rem 0 4rem 0;
@@ -168,18 +163,41 @@ nav [class*="fa-"]:hover {
   border-radius: 25px;
   padding: 1rem;
 }
-@media (min-width: 550px) {
+@media (min-width: 800px) {
   article {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(10, 1fr);
     gap: 1rem;
   }
+  #projects {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  #projects img {
+    grid-column: 1/6;
+    grid-row: 1/2;
+  }
   .text {
+    grid-column: 5/11; /*  burada 5 diyerek imgin üstüne gelmesini sağlarız. */
+    grid-row: 1/2; /* birinci rowda kalmasını sağlarız.   */
     order: 1;
     text-align: right;
   }
-  #projects ul{
+  #projects ul {
     justify-content: flex-end;
+  }
+  #projects .reverse .text {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    order: 2;
+    text-align: left;
+  }
+  #projects .reverse img {
+    grid-column: 6/11;
+    grid-row: 1/2;
+  }
+  #projects .reverse ul {
+    justify-content: flex-start;
   }
 }
 
@@ -226,6 +244,20 @@ footer ul {
   gap: 3rem;
   font-size: 3rem;
 }
+/*      media       */
+
+@media (min-width: 850px) {
+  nav {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  nav li:first-child {
+    flex-basis: auto;
+    text-align: left;
+    margin-right: auto;
+  }
+}
+
 /* footer h2{
   flex-basis:100%;
   margin:1rem auto;
@@ -241,17 +273,3 @@ footer li [class*="fa-"] {
 footer li [class*="fa-"]:hover {
   color: var(--aqua);
 } */
-
-/*      media       */
-
-@media (min-width: 850px) {
-  nav {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  nav li:first-child {
-    flex-basis: auto;
-    text-align: left;
-    margin-right: auto;
-  }
-}
